<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calculTotal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C5C5C5"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/calcul"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/resultat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/resultat"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:columnCount="5"
            android:rowCount="5">

            <Button
                android:id="@+id/btn7"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:text="@string/sept"
                android:textColorLink="#FF5722"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn8"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:text="@string/huit"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn9"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:text="@string/neuf"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnplus"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="3"
                android:layout_columnWeight="1"
                android:text="@string/plus"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn4"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:text="@string/quatre"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn5"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:text="@string/cinq"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn6"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:text="@string/six"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnmoins"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_column="3"
                android:layout_columnWeight="1"
                android:text="@string/moins"
                android:textSize="30sp" />


            <Button
                android:id="@+id/btn1"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:text="@string/un"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn2"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:text="@string/deux"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn3"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:text="@string/trois"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnfois"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_column="3"
                android:layout_columnWeight="1"
                android:text="@string/multiplier"
                android:textSize="30sp" />


            <Button
                android:id="@+id/btn0"
                android:layout_row="3"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_columnWeight="1"
                android:text="@string/zero"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btndiv"
                android:layout_row="3"
                android:layout_rowWeight="1"
                android:layout_column="2"
                android:layout_columnSpan="2"
                android:layout_columnWeight="1"
                android:text="@string/diviser"
                android:textSize="30sp" />

        </GridLayout>


        <LinearLayout
            android:id="@+id/layoutEgal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnclear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FF6133"
            android:text="@string/clear"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />
    </LinearLayout>


</LinearLayout>